# mcm-helper-visualizer

./: .prettierignore  .prettierrc  README.md  biome.jsonc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  config.ts  header.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: fonts.css
src/components/app/: welcome.tsx
src/components/header/: load-config-button.tsx  load-translations-button.tsx  open-log-dir-button.tsx  reload-changes-button.tsx  simutation-select.tsx
src/components/mcm/: color.tsx  control-text-tooltip.tsx  display-control-group-config.tsx  display-control-group-control-config.tsx  empty.tsx  enum.tsx  header.tsx  help-text.tsx  hidden-toggle.tsx  input.tsx  keymap.tsx  mcm-content.tsx  menu.tsx  page.tsx  slider.tsx  stepper.tsx  text.tsx  toggle.tsx
src/components/page/: control-text-tooltip.tsx  display-control-group-config.tsx  display-control-group-control-config.tsx  display-control-source-config.tsx  help-text.tsx  page-menu.tsx
src/components/ui/: button.tsx  command.tsx  dialog.tsx  select.tsx  slider.tsx  toast.tsx  toaster.tsx  tooltip.tsx
src/hooks/: use-current-page-conditions.ts  use-evaluate-group-condition.ts  use-help-text-handler.ts  use-highest-group-condition.ts  use-load-config.ts  use-load-config.tsx  use-ordered-page.ts  use-t.ts  use-translations.ts
src/hooks/mcm/: use-help-text-handler.tsx  use-mcm-config.ts  use-mcm.tsx  use-page.ts  use-simulation.ts
src/ipc/: open_log_dir.ts
src/lib/: classname-by-group-behavior.ts  color-from-text.tsx  evaluate-group-condition.ts  group-condition-as-array-number.ts  group-condition-as-number.ts  group-condition-as-string.ts  highest-group-condition-in-config.ts  is-same-page.ts  log-text.ts  mcm-displayable-content.ts  order-page-content.ts  path-exists.ts  read-file.ts  read-translations-from-path.ts  translations.ts  utils.ts
