[package]
name = "mcm-helper-visualizer"
version = "0.2.0"
description = "Mcm Helper Visualizer. A tool to visualize the mcm helper menu without opening the game."
authors = ["kiyozz alias wk alias wushulate"]
license = "GPL-3"
repository = "https://github.com/kiyozz/mcm-helper-visualizer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mcm_helper_visualizer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utf16string = "0.2.0"
log = "0.4.20"
fern = "0.6.2"
humantime = "2.1.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
